UHM-4071, prevent patient name column from overflow

--- a/app/css/lab-results-view.scss
+++ b/app/css/lab-results-view.scss
@@ -7,7 +7,6 @@
 
   .ReactTable .rt-tbody .rt-td {
       border-right: 1px solid rgba(0,0,0,0.02);
-      overflow: visible;
   }
 
   .ReactTable.-striped .rt-tr.-odd {
@@ -46,7 +45,6 @@
 
 .ReactTable .rt-tbody .rt-td {
   border-right: 1px solid rgba(0,0,0,0.45);
-  overflow: visible;
 }
 
 .lab-results-list-column-header {
